--- a/docs/maintainers/feedback/sourcery/pr12.md
+++ b/docs/maintainers/feedback/sourcery/pr12.md
@@ -263,7 +263,7 @@ Use this template to assess each comment:
 | ------- | --------- | --------- | --------- | ------------------------------------------------------------------------------------------- |
 | #1      | 🟡 MEDIUM | 🟡 MEDIUM | 🟢 LOW    | Use `click.Choice` for better CLI validation. Improves UX by catching invalid values early. |
 | #2      | 🟡 MEDIUM | 🟢 LOW    | 🟢 LOW    | Tighten test expectations for invalid status. Test quality improvement.                     |
-| #3      | 🟡 MEDIUM | 🟢 LOW    | 🟡 MEDIUM | ✅ Fixed | Fixed in PR #TBD (pr12-batch-medium-medium-01) |
+| #3      | 🟡 MEDIUM | 🟢 LOW    | 🟡 MEDIUM | ✅ Fixed | Fixed in PR #13 (pr12-batch-medium-medium-01) |
 | #4      | 🟢 LOW    | 🟢 LOW    | 🟢 LOW    | Use named expression. Minor code quality improvement.                                       |
 | #5      | 🟢 LOW    | 🟢 LOW    | 🟢 LOW    | Raise from previous error. Minor code quality improvement.                                  |
 
