--- a/docs/maintainers/feedback/sourcery/pr12.md
+++ b/docs/maintainers/feedback/sourcery/pr12.md
@@ -260,10 +260,10 @@ def list_projects(status, organization, classification, search):
 Use this template to assess each comment:
 
 | Comment | Priority  | Impact    | Effort    | Notes                                                                                       |
-| ------- | --------- | --------- | --------- | ------------------------------------------------------------------------------------------- |
+| ------- | --------- | --------- | --------- | ------------------------------------------------------------------------------------------- | --------------------------------------------- |
 | #1      | 🟡 MEDIUM | 🟡 MEDIUM | 🟢 LOW    | Use `click.Choice` for better CLI validation. Improves UX by catching invalid values early. |
 | #2      | 🟡 MEDIUM | 🟢 LOW    | 🟢 LOW    | Tighten test expectations for invalid status. Test quality improvement.                     |
-| #3      | 🟡 MEDIUM | 🟢 LOW    | 🟡 MEDIUM | Avoid conditionals in tests. Code quality improvement, requires test refactoring.           |
+| #3      | 🟡 MEDIUM | 🟢 LOW    | 🟡 MEDIUM | ✅ Fixed                                                                                    | Fixed in PR #13 (pr12-batch-medium-medium-01) |
 | #4      | 🟢 LOW    | 🟢 LOW    | 🟢 LOW    | Use named expression. Minor code quality improvement.                                       |
 | #5      | 🟢 LOW    | 🟢 LOW    | 🟢 LOW    | Raise from previous error. Minor code quality improvement.                                  |
 
