docs(review): update Sourcery review with fixed status (PR14)
- Mark PR14-#1 and PR14-#2 as fixed
- Both issues addressed in this PR

Part of: quick-wins-low-low-01

--- a/docs/maintainers/feedback/sourcery/pr14.md
+++ b/docs/maintainers/feedback/sourcery/pr14.md
@@ -87,8 +87,8 @@ Use this template to assess each comment:
 
 | Comment | Priority | Impact | Effort | Notes |
 |---------|----------|--------|--------|-------|
-| #1 | 🟡 MEDIUM | 🟢 LOW | 🟢 LOW | Strengthen test assertions for ordering - use IDs instead of relying on insertion order |
-| #2 | 🟢 LOW | 🟢 LOW | 🟢 LOW | Clarify `/pr` vs `@pr` notation in deprecation note - documentation improvement |
+| #1 | 🟡 MEDIUM | 🟢 LOW | 🟢 LOW | ✅ Fixed | Strengthened test assertions with ID-based ordering check |
+| #2 | 🟢 LOW | 🟢 LOW | 🟢 LOW | ✅ Fixed | Clarified command notation in deprecation notice |
 
 ### Priority Levels
 - 🔴 **CRITICAL**: Security, stability, or core functionality issues
