fix: Quick wins - test improvements and error handling (quick-wins-low-low-01, cross-PR batch) (#14)
* fix(tests): improve test assertions and error handling (PR01-#5, PR02-#5, PR02-#9, PR02-#10, PR02-#11, PR12-#5)

- PR01-#5: Already fixed (test_health.py uses response.get_json())
- PR02-#5: Assert full error message 'Name is required' instead of keyword check
- PR02-#9: Refactor setup loop to explicit project creation
- PR02-#10: Add 'from e' to raise in get_cmd.py
- PR02-#11: Add 'from e' to raise in list_cmd.py
- PR12-#5: Add 'from e' to raise in list_cmd.py (same file as PR02-#11)
- Also fix null status tests to assert full message 'Status cannot be null'

Fixes: PR01-#5, PR02-#5, PR02-#9, PR02-#10, PR02-#11, PR12-#5
Part of: quick-wins-low-low-01 (cross-PR batch)
Source PRs: PR #1, PR #2, PR #12

* docs(fix): update quick-wins batch status and create centralized PR command

- Mark quick-wins-low-low-01 batch as complete
- Update Sourcery reviews (PR #1, #2, #12) with fixed status
- Update cross-PR hub with completion status
- Create centralized /pr command for phase and fix PRs
- Update fix plan with implementation checklist

Fixes: PR01-#5, PR01-#6, PR02-#5, PR02-#9, PR02-#10, PR02-#11, PR12-#5
Part of: quick-wins-low-low-01 (cross-PR batch)

* refactor(commands): consolidate phase-pr into centralized pr command

- Merge comprehensive validation and workflow from phase-pr into /pr --phase
- Add pre-PR validation checklist to /pr --phase
- Add manual testing scenario workflow to /pr --phase
- Add Sourcery review workflow to /pr --phase
- Update all command references to use /pr instead of /phase-pr
- Delete deprecated phase-pr.md command

Benefits:
- Single command for all PR creation (phases and fixes)
- Consistent workflow and validation
- Easier maintenance (one place to update)
- Better integration with related commands

Related: Centralized PR command creation

* docs(commands): add deprecation notice to phase-pr command

- Mark phase-pr.md as deprecated


--- a/docs/maintainers/feedback/sourcery/pr12.md
+++ b/docs/maintainers/feedback/sourcery/pr12.md
@@ -265,7 +265,7 @@ Use this template to assess each comment:
 | #2      | 🟡 MEDIUM | 🟢 LOW    | 🟢 LOW    | Tighten test expectations for invalid status. Test quality improvement.                     |
 | #3      | 🟡 MEDIUM | 🟢 LOW    | 🟡 MEDIUM | ✅ Fixed                                                                                    | Fixed in PR #13 (pr12-batch-medium-medium-01) |
 | #4      | 🟢 LOW    | 🟢 LOW    | 🟢 LOW    | Use named expression. Minor code quality improvement.                                       |
-| #5      | 🟢 LOW    | 🟢 LOW    | 🟢 LOW    | Raise from previous error. Minor code quality improvement.                                  |
+| #5      | 🟢 LOW    | 🟢 LOW    | 🟢 LOW    | ✅ Fixed                                                                                    | Fixed in quick-wins-low-low-01                |
 
 ### Priority Levels
 
