--- a/docs/maintainers/feedback/sourcery/pr12.md
+++ b/docs/maintainers/feedback/sourcery/pr12.md
@@ -261,7 +261,7 @@ Use this template to assess each comment:
 
 | Comment | Priority  | Impact    | Effort    | Notes                                                                                       |
 | ------- | --------- | --------- | --------- | ------------------------------------------------------------------------------------------- | --------------------------------------------- |
-| #1      | 🟡 MEDIUM | 🟡 MEDIUM | 🟢 LOW    | Use `click.Choice` for better CLI validation. Improves UX by catching invalid values early. |
+| #1      | 🟡 MEDIUM | 🟡 MEDIUM | 🟢 LOW    | ✅ Fixed - Use `click.Choice` for better CLI validation (PR #18) |
 | #2      | 🟡 MEDIUM | 🟢 LOW    | 🟢 LOW    | Tighten test expectations for invalid status. Test quality improvement.                     |
 | #3      | 🟡 MEDIUM | 🟢 LOW    | 🟡 MEDIUM | ✅ Fixed                                                                                    | Fixed in PR #13 (pr12-batch-medium-medium-01) |
 | #4      | 🟢 LOW    | 🟢 LOW    | 🟢 LOW    | Use named expression. Minor code quality improvement.                                       |
