--- a/docs/maintainers/feedback/sourcery/pr12.md
+++ b/docs/maintainers/feedback/sourcery/pr12.md
@@ -262,7 +262,7 @@ Use this template to assess each comment:
 | Comment | Priority  | Impact    | Effort    | Notes                                                                                       |
 | ------- | --------- | --------- | --------- | ------------------------------------------------------------------------------------------- | --------------------------------------------- |
 | #1      | 🟡 MEDIUM | 🟡 MEDIUM | 🟢 LOW    | ✅ Fixed - Use `click.Choice` for better CLI validation (PR #18) |
-| #2      | 🟡 MEDIUM | 🟢 LOW    | 🟢 LOW    | Tighten test expectations for invalid status. Test quality improvement.                     |
+| #2      | 🟡 MEDIUM | 🟢 LOW    | 🟢 LOW    | ✅ Fixed - Tighten test expectations for invalid status (PR #19) |
 | #3      | 🟡 MEDIUM | 🟢 LOW    | 🟡 MEDIUM | ✅ Fixed                                                                                    | Fixed in PR #13 (pr12-batch-medium-medium-01) |
 | #4      | 🟢 LOW    | 🟢 LOW    | 🟢 LOW    | Use named expression. Minor code quality improvement.                                       |
 | #5      | 🟢 LOW    | 🟢 LOW    | 🟢 LOW    | ✅ Fixed                                                                                    | Fixed in quick-wins-low-low-01                |
