docs(sourcery): mark PR16-#10 and PR18-Overall-#2 as fixed
Mark issues as fixed in PR #22 (code-refactoring-medium-medium-01).

Part of: code-refactoring-medium-medium-01 (cross-PR batch)
Source PRs: PR #16, PR #18

--- a/docs/maintainers/feedback/sourcery/pr16.md
+++ b/docs/maintainers/feedback/sourcery/pr16.md
@@ -687,7 +687,7 @@ Use this template to assess each comment:
 | #7 | 🟢 LOW | 🟢 LOW | 🟡 MEDIUM | Avoid loop in test - code quality improvement |
 | #8 | 🟢 LOW | 🟢 LOW | 🟢 LOW | Swap if expression - minor readability improvement |
 | #9 | 🟢 LOW | 🟢 LOW | 🟢 LOW | Remove duplicate dict key - test cleanup |
-| #10 | 🟡 MEDIUM | 🟢 LOW | 🟡 MEDIUM | Extract duplicate code - refactoring opportunity |
+| #10 | 🟡 MEDIUM | 🟢 LOW | 🟡 MEDIUM | ✅ Fixed - Extract duplicate code into helper (PR #22) |
 | #11 | 🟡 MEDIUM | 🟡 MEDIUM | 🟠 HIGH | Low code quality function - complex refactoring needed |
 | #12 | 🟢 LOW | 🟢 LOW | 🟢 LOW | Raise from previous error - error context improvement |
 
