docs(sourcery): update PR18 priority matrix for Overall-#2
Mark Overall #2 as fixed in PR #22 in priority matrix table.

Part of: code-refactoring-medium-medium-01 (cross-PR batch)
Source PRs: PR #16, PR #18

--- a/docs/maintainers/feedback/sourcery/pr18.md
+++ b/docs/maintainers/feedback/sourcery/pr18.md
@@ -54,7 +54,7 @@ Use this template to assess each comment:
 | Comment | Priority | Impact | Effort | Notes |
 |---------|----------|--------|--------|-------|
 | Overall #1 | 🟢 LOW | 🟢 LOW | 🟢 LOW | Consistency: Align missing-value handling (Path vs N/A) - Defer |
-| Overall #2 | 🟡 MEDIUM | 🟡 MEDIUM | 🟡 MEDIUM | Refactoring: Factor column config into helper - Defer (premature optimization) |
+| Overall #2 | 🟡 MEDIUM | 🟡 MEDIUM | 🟡 MEDIUM | ✅ Fixed - Factor column config into helper (PR #22) |
 | Overall #3 | 🟢 LOW | 🟡 MEDIUM | 🟢 LOW | ✅ Fixed - UX: Expand --wide flag help text (PR #18) |
 
 ### Priority Levels
