--- a/docs/maintainers/feedback/sourcery/pr18.md
+++ b/docs/maintainers/feedback/sourcery/pr18.md
@@ -33,7 +33,7 @@ Total Individual Comments: 0 + Overall Comments
 
 **Assessment:** Good refactoring suggestion for maintainability. However, current implementation is simple and clear. This would be valuable if we add more view modes in the future, but premature optimization for now.
 
-**Action:** Defer to future PR (when adding more view modes)
+**Action:** ✅ Fixed - Factor column configuration into helper (PR #22)
 
 ---
 
@@ -54,7 +54,7 @@ Use this template to assess each comment:
 | Comment | Priority | Impact | Effort | Notes |
 |---------|----------|--------|--------|-------|
 | Overall #1 | 🟢 LOW | 🟢 LOW | 🟢 LOW | Consistency: Align missing-value handling (Path vs N/A) - Defer |
-| Overall #2 | 🟡 MEDIUM | 🟡 MEDIUM | 🟡 MEDIUM | Refactoring: Factor column config into helper - Defer (premature optimization) |
+| Overall #2 | 🟡 MEDIUM | 🟡 MEDIUM | 🟡 MEDIUM | ✅ Fixed - Factor column config into helper (PR #22) |
 | Overall #3 | 🟢 LOW | 🟡 MEDIUM | 🟢 LOW | ✅ Fixed - UX: Expand --wide flag help text (PR #18) |
 
 ### Priority Levels
