--- a/docs/maintainers/feedback/sourcery/pr24.md
+++ b/docs/maintainers/feedback/sourcery/pr24.md
@@ -677,9 +677,9 @@ Use this template to assess each comment:
 
 | Comment | Priority | Impact | Effort | Notes |
 |---------|----------|--------|--------|-------|
-| #1 | 🟡 MEDIUM | 🟡 MEDIUM | 🟢 LOW | Bug risk: Invalid config values crash CLI. Should catch ValueError and fall back to default. |
+| #1 | 🟡 MEDIUM | 🟡 MEDIUM | 🟢 LOW | ✅ Fixed - Guard against invalid display.max_rows values (PR #25) |
 | #2 | 🟡 MEDIUM | 🟡 MEDIUM | 🟡 MEDIUM | Hardcoded URL in error messages. Should use Config.get_api_url() for accuracy. |
-| #3 | 🟡 MEDIUM | 🟡 MEDIUM | 🟡 MEDIUM | Bug risk: Health URL construction brittle. Should use urllib.parse or explicit path construction. |
+| #3 | 🟡 MEDIUM | 🟡 MEDIUM | 🟡 MEDIUM | ✅ Fixed - Fix health URL construction (PR #25) |
 | #4 | 🟢 LOW | 🟢 LOW | 🟢 LOW | Nitpick: Unused `total` parameter in progress_bar signature. |
 | #5 | 🟢 LOW | 🟢 LOW | 🟢 LOW | Question: Unreachable branch (config.get_all() never empty due to defaults). |
 | #6 | 🟢 LOW | 🟢 LOW | 🟢 LOW | Code quality: Merge nested if conditions. |
