docs(fix): update PR number to #27 for configuration improvements batch

--- a/docs/maintainers/feedback/sourcery/pr24.md
+++ b/docs/maintainers/feedback/sourcery/pr24.md
@@ -678,7 +678,7 @@ Use this template to assess each comment:
 | Comment | Priority | Impact | Effort | Notes |
 |---------|----------|--------|--------|-------|
 | #1 | 🟡 MEDIUM | 🟡 MEDIUM | 🟢 LOW | ✅ Fixed - Guard against invalid display.max_rows values (PR #25) |
-| #2 | 🟡 MEDIUM | 🟡 MEDIUM | 🟡 MEDIUM | Hardcoded URL in error messages. Should use Config.get_api_url() for accuracy. |
+| #2 | 🟡 MEDIUM | 🟡 MEDIUM | 🟡 MEDIUM | ✅ Fixed - Use configured API base URL in error messages (PR #27) |
 | #3 | 🟡 MEDIUM | 🟡 MEDIUM | 🟡 MEDIUM | ✅ Fixed - Fix health URL construction (PR #25) |
 | #4 | 🟢 LOW | 🟢 LOW | 🟢 LOW | Nitpick: Unused `total` parameter in progress_bar signature. |
 | #5 | 🟢 LOW | 🟢 LOW | 🟢 LOW | Question: Unreachable branch (config.get_all() never empty due to defaults). |
@@ -695,8 +695,8 @@ Use this template to assess each comment:
 
 | Comment | Priority | Impact | Effort | Notes |
 |---------|----------|--------|--------|-------|
-| Overall #1 | 🟡 MEDIUM | 🟡 MEDIUM | 🟡 MEDIUM | Config defaults visibility: Consider merging DEFAULT_CONFIG into get_all() output so users see effective defaults. |
-| Overall #2 | 🟡 MEDIUM | 🟡 MEDIUM | 🟡 MEDIUM | Hardcoded URLs: Use Config.get_api_url() in error messages to keep troubleshooting instructions accurate. |
+| Overall #1 | 🟡 MEDIUM | 🟡 MEDIUM | 🟡 MEDIUM | ✅ Fixed - Config defaults visibility: Merged DEFAULT_CONFIG into get_all() output (PR #27) |
+| Overall #2 | 🟡 MEDIUM | 🟡 MEDIUM | 🟡 MEDIUM | ✅ Fixed - Hardcoded URLs: Use Config.get_api_url() in error messages (PR #27) |
 | Overall #3 | 🟢 LOW | 🟢 LOW | 🟡 MEDIUM | Progress bar misleading: Import progress bar updates all at once. Consider per-item progress or spinner. |
 
 ### Priority Levels
