fix: Test infrastructure improvements (pr29-batch-medium-medium-01) (#31)
* fix(tests): centralize CLI test fixtures (PR29-#4)

Extract shared FlaskTestClientAdapter setup to mock_api_client helper
in test_helpers.py. Update mock_api_for_cli fixture to delegate to shared
helper, keeping only CLI-specific overrides (health check, config).

This removes code duplication and simplifies maintenance.

Fixes: PR29-#4
Part of: pr29-batch-medium-medium-01

* fix(tests): scope API mocking via pytest fixtures (PR29-Overall #2)

Document that API mocking is scoped to test lifecycle via pytest's
monkeypatch fixture, which automatically restores original methods
after each test. This reduces global side effects compared to manual
patching and ensures proper cleanup.

Fixes: PR29-Overall #2
Part of: pr29-batch-medium-medium-01

* fix(tests): improve CLI script loading mechanism (PR29-Overall #3)

Refactor CLI to expose Click group from regular Python module (cli.py)
instead of executing proj script file. This provides a more robust and
debuggable loading mechanism for tests.

- Create cli.py module with CLI group definition
- Update proj script to import from cli module
- Update cli_loader.py to import directly instead of using exec

Fixes: PR29-Overall #3
Part of: pr29-batch-medium-medium-01

* docs(pr29): mark batch-medium-medium-01 as complete

All 3 issues implemented:
- PR29-#4: Centralized CLI test fixtures
- Overall #2: Scoped API mocking via pytest fixtures
- Overall #3: Improved CLI script loading

Part of: pr29-batch-medium-medium-01

* docs(pr29): mark batch-medium-medium-01 issues as fixed

Update Sourcery review and fix tracking to reflect completion of
batch-medium-medium-01 (3 issues fixed).

Part of: pr29-batch-medium-medium-01

* docs(pr29): update batch-medium-medium-01 with PR #31 reference

Update fix plan and tracking documents to reference PR #31.

Related: PR #31

* docs(pr29): add PR #31 reference to batch-medium-medium-01 in README

Related: PR #31

* doc

--- a/docs/maintainers/feedback/sourcery/pr29.md
+++ b/docs/maintainers/feedback/sourcery/pr29.md
@@ -541,7 +541,7 @@ Use this template to assess each comment:
 | #1 | 🟠 HIGH | 🟠 HIGH | 🟡 MEDIUM | ✅ Fixed | Bulk import IntegrityError handling - affects data integrity (Fixed in PR #30 - pr29-batch-high-medium-01) |
 | #2 | 🟡 MEDIUM | 🟡 MEDIUM | 🟢 LOW | Test allows multiple outcomes - weakens regression testing |
 | #3 | 🟡 MEDIUM | 🟡 MEDIUM | 🟢 LOW | CLI tests allow multiple exit codes - reduces test value |
-| #4 | 🟡 MEDIUM | 🟢 LOW | 🟡 MEDIUM | Code duplication in CLI test fixtures - maintainability |
+| #4 | 🟡 MEDIUM | 🟢 LOW | 🟡 MEDIUM | ✅ Fixed | Code duplication in CLI test fixtures - maintainability (Fixed in PR #31, pr29-batch-medium-medium-01) |
 | #5 | 🟢 LOW | 🟢 LOW | 🟢 LOW | Documentation status inconsistency - typo fix |
 | #6 | 🟢 LOW | 🟢 LOW | 🟢 LOW | Merge nested if conditions - code style |
 | #7 | 🟡 MEDIUM | 🟢 LOW | 🟢 LOW | Conditionals in tests - test quality |
@@ -555,8 +555,8 @@ Use this template to assess each comment:
 | #15 | 🟡 MEDIUM | 🟢 LOW | 🟢 LOW | Loops in tests - test quality |
 | #16 | 🟢 LOW | 🟢 LOW | 🟢 LOW | Use named expression - code style |
 | Overall #1 | 🟡 MEDIUM | 🟢 LOW | 🟢 LOW | Centralize sys.path manipulation in CLI tests |
-| Overall #2 | 🟡 MEDIUM | 🟡 MEDIUM | 🟡 MEDIUM | Scope API mocking more narrowly |
-| Overall #3 | 🟡 MEDIUM | 🟢 LOW | 🟠 HIGH | Improve CLI script loading mechanism |
+| Overall #2 | 🟡 MEDIUM | 🟡 MEDIUM | 🟡 MEDIUM | ✅ Fixed | Scope API mocking more narrowly (Fixed in PR #31, pr29-batch-medium-medium-01) |
+| Overall #3 | 🟡 MEDIUM | 🟢 LOW | 🟠 HIGH | ✅ Fixed | Improve CLI script loading mechanism (Fixed in PR #31, pr29-batch-medium-medium-01) |
 
 ### Priority Levels
 - 🔴 **CRITICAL**: Security, stability, or core functionality issues
