docs(review): add Overall Comments Assessment to PR22 priority matrix
Mark PR22-Overall #2 as fixed in PR #33.

Part of: test-quality-improvements-medium-low-02 (cross-PR batch)

--- a/docs/maintainers/feedback/sourcery/pr22.md
+++ b/docs/maintainers/feedback/sourcery/pr22.md
@@ -185,6 +185,13 @@ Use this template to assess each comment:
 | #3 | 🟢 LOW | 🟢 LOW | 🟢 LOW | Grammar: Add articles before "method" and "helper" - defer to next PR |
 | #4 | 🟢 LOW | 🟢 LOW | 🟢 LOW | Code quality: Merge nested if conditions - defer to next PR |
 
+**Overall Comments Assessment:**
+
+| Comment | Priority | Impact | Effort | Notes |
+|---------|----------|--------|--------|-------|
+| Overall #1 | 🟡 MEDIUM | 🟡 MEDIUM | 🟠 HIGH | 🟡 DEFER - Decouple validation from Flask (architectural improvement, HIGH effort) |
+| Overall #2 | 🟡 MEDIUM | 🟡 MEDIUM | 🟡 MEDIUM | ✅ Fixed - Simplified build_projects_table API with explicit boolean flags (PR #33, test-quality-improvements-medium-low-02) |
+
 ### Priority Levels
 - 🔴 **CRITICAL**: Security, stability, or core functionality issues
 - 🟠 **HIGH**: Bug risks or significant maintainability issues
