fix: Quick Wins Batch 3 - Code Quality Improvements (quick-wins-low-low-03, cross-PR batch) (#32)
* fix(cli): remove unused total parameter from progress_bar (PR24-#4)

Remove total parameter from progress_bar function signature since
it's not used - callers pass total directly to add_task instead.

Fixes: PR24-#4
Part of: quick-wins-low-low-03 (cross-PR batch)
Source PRs: PR #24

* fix(cli): fix unreachable branch in config show command (PR24-#5)

Replace check for empty get_all() with check for config file existence,
since get_all() always returns defaults and is never empty.

Fixes: PR24-#5
Part of: quick-wins-low-low-03 (cross-PR batch)
Source PRs: PR #24

* fix(cli): merge nested if conditions in APIClient (PR24-#6)

Merge nested if conditions to simplify code and improve readability.

Fixes: PR24-#6
Part of: quick-wins-low-low-03 (cross-PR batch)
Source PRs: PR #24

* fix(cli): replace bare except: with except Exception: (PR24-#7, #12, #13)

Replace bare except: clauses with except Exception: to avoid catching
system-exiting exceptions like KeyboardInterrupt and SystemExit.

Fixes: PR24-#7, PR24-#12, PR24-#13
Part of: quick-wins-low-low-03 (cross-PR batch)
Source PRs: PR #24

* fix(cli): use named expression in get_max_rows (PR24-#8)

Use walrus operator (:=) to simplify assignment and conditional check.

Fixes: PR24-#8
Part of: quick-wins-low-low-03 (cross-PR batch)
Source PRs: PR #24

* fix(cli): simplify dict update in get_all (PR24-#9)

Replace inner loop with dict.update() for cleaner code.

Fixes: PR24-#9
Part of: quick-wins-low-low-03 (cross-PR batch)
Source PRs: PR #24

* fix(cli): merge assignment and augmented assignment in error handlers (PR24-#10)

Replace string concatenation with single multi-line string assignment
for cleaner code in _handle_connection_error and _handle_timeout_error.

Fixes: PR24-#10
Part of: quick-wins-low-low-03 (cross-PR batch)
Source PRs: PR #24

* docs(fix-plan): mark Quick Wins Batch 3 as complete

Update fix plan and Sou

--- a/docs/maintainers/feedback/sourcery/pr24.md
+++ b/docs/maintainers/feedback/sourcery/pr24.md
@@ -680,16 +680,16 @@ Use this template to assess each comment:
 | #1 | 🟡 MEDIUM | 🟡 MEDIUM | 🟢 LOW | ✅ Fixed - Guard against invalid display.max_rows values (PR #25) |
 | #2 | 🟡 MEDIUM | 🟡 MEDIUM | 🟡 MEDIUM | ✅ Fixed - Use configured API base URL in error messages (PR #27) |
 | #3 | 🟡 MEDIUM | 🟡 MEDIUM | 🟡 MEDIUM | ✅ Fixed - Fix health URL construction (PR #25) |
-| #4 | 🟢 LOW | 🟢 LOW | 🟢 LOW | Nitpick: Unused `total` parameter in progress_bar signature. |
-| #5 | 🟢 LOW | 🟢 LOW | 🟢 LOW | Question: Unreachable branch (config.get_all() never empty due to defaults). |
-| #6 | 🟢 LOW | 🟢 LOW | 🟢 LOW | Code quality: Merge nested if conditions. |
-| #7 | 🟢 LOW | 🟢 LOW | 🟢 LOW | Code quality: Use `except Exception:` instead of bare `except:`. |
-| #8 | 🟢 LOW | 🟢 LOW | 🟢 LOW | Code quality: Use named expression (walrus operator). |
-| #9 | 🟢 LOW | 🟢 LOW | 🟢 LOW | Code quality: Convert for loop to dict comprehension. |
-| #10 | 🟢 LOW | 🟢 LOW | 🟢 LOW | Code quality: Merge assignment and augmented assignment. |
-| #11 | 🟢 LOW | 🟢 LOW | 🟢 LOW | Code quality: Merge assignment and augmented assignment. |
-| #12 | 🟢 LOW | 🟢 LOW | 🟢 LOW | Code quality: Use `except Exception:` instead of bare `except:`. |
-| #13 | 🟢 LOW | 🟢 LOW | 🟢 LOW | Code quality: Use `except Exception:` instead of bare `except:`. |
+| #4 | 🟢 LOW | 🟢 LOW | 🟢 LOW | ✅ Fixed - Remove unused total parameter from progress_bar (quick-wins-low-low-03) |
+| #5 | 🟢 LOW | 🟢 LOW | 🟢 LOW | ✅ Fixed - Fix unreachable branch in config show command (quick-wins-low-low-03) |
+| #6 | 🟢 LOW | 🟢 LOW | 🟢 LOW | ✅ Fixed - Merge nested if conditions in APIClient (quick-wins-low-low-03) |
+| #7 | 🟢 LOW | 🟢 LOW | 🟢 LOW | ✅ Fixed - Use `except Exception:` instead of bare `except:` in api_client (quick-wins-low-low-03) |
+| #8 | 🟢 LOW | 🟢 LOW | 🟢 LOW | ✅ Fixed - Use named expression in get_max_rows (quick-wins-low-low-03) |
+| #9 | 🟢 LOW | 🟢 LOW | 🟢 LOW | ✅ Fixed - Simplify dict update in get_all (quick-wins-low-low-03) |
+| #10 | 🟢 LOW | 🟢 LOW | 🟢 LOW | ✅ Fixed - Merge assignment and augmented assignment in error handlers (quick-wins-low-low-03) |
+| #11 | 🟢 LOW | 🟢 LOW | 🟢 LOW | ✅ Fixed - Merge assignment and augmented assignment in error handlers (quick-wins-low-low-03) |
+| #12 | 🟢 LOW | 🟢 LOW | 🟢 LOW | ✅ Fixed - Use `except Exception:` instead of bare `except:` in error_handler (quick-wins-low-low-03) |
+| #13 | 🟢 LOW | 🟢 LOW | 🟢 LOW | ✅ Fixed - Use `except Exception:` instead of bare `except:` (already fixed in previous PR, check_backend_health uses except Exception:) |
 
 **Overall Comments Assessment:**
 
